# tadanounigram

./: .gitignore  MANIFEST.in  Makefile  Pipfile  README.md  make.bat  setup.cfg  tadanounigram.py
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  tadanounigram.html
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  tadanounigram.doctree
docs/_modules/: index.html  tadanounigram.html
docs/_sources/: tadanounigram.rst.txt
source/: conf.py  index.rst  modules.rst
tadanounigram/: __init__.py  tadanounigram.py
tadanounigram/lib/: count_100000sentence.pickle
