[metadata]
name = tadanounigram
version = 1.0.0
author = wbydo
author_email = wbydo@users.noreply.github.com
description = simple KATAKANA 1-gram
url = https://github.com/wbydo/tadanounigram
license = MIT

[options]
include_package_data = True
packages = find:

[option.packages.find]
exclude =
  doc
